# NexusAgent

./: .env.cloud.example  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_zh.md  TeamWorkCLAUDE.md  TeamWorkflow.md  build-desktop.sh  docker-compose.yaml  pyproject.toml  run.sh  weekly_report_20260319.md
.github/: pull_request_template.md
.github/workflows/: build-desktop.yml  ci.yml  desktop-release.yml
.mindflow/: README.md  _overview.md
.mindflow/lessons/: _index.md  goal-driven.md  hook-friction.md  skipping-phases.md
.mindflow/project/: README.md
.nac_doc/project/: README.md
backend/: __init__.py  auth.py  config.py  main.py
backend/middleware/: __init__.py  access_log.py
backend/routes/: __init__.py  _dashboard_helpers.py  _dashboard_schema.py  _rate_limiter.py  admin_logs.py  admin_quota.py  agent_inbox.py  agents.py  agents_attachments.py  agents_awareness.py  agents_chat_history.py  agents_cost.py  agents_files.py  agents_mcps.py  agents_rag.py  agents_social_network.py  auth.py  dashboard.py  inbox.py  jobs.py  lark.py  providers.py  quota.py  skills.py  websocket.py
backend/state/: active_sessions.py
benchmark/generated_seed_data/: 20260417T071541Z_art_memory.json  20260417T071757Z_career_background.json  20260417T072104Z_identity_network.json  20260417T072411Z_preference_alignment.json  20260417T072527Z_project_followup.json  social_network_issue_seed_catalog.json  social_network_issue_seed_catalog.md
benchmark/replay/: __init__.py  engine.py  models.py  run.py  test_config.py
benchmark/test_configs/: README.md  awareness_isolation.yaml  full_integration.yaml  memory_isolation.yaml  sn_isolation.yaml  sn_plus_memory.yaml
deploy/: AWS_SECURITY_GROUP.md  SERVICE_ARCHITECTURE.md  deploy.sh  restart.sh  update.sh
deploy/nginx/: xyz-agent.conf
deploy/synapse/: homeserver.yaml
deploy/systemd/: xyz-agent-api.service  xyz-agent-job-trigger.service  xyz-agent-mcp.service  xyz-agent-poller.service  xyz-mysql.service
desktop/: ELECTRON_BUILD_GUIDE.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  version.json
desktop/resources/: entitlements.mac.plist
desktop/scripts/: clean-for-test.sh
docs/: AGENT_WORKFLOW_DETAILED.md  ARCHITECTURE.md  BREAKING_CHANGES.md  CHANGELOG.md  DEVELOPMENT.md  EXAMPLES.md  EXAMPLES_zh.md  TELEGRAM.md  UI-GUIDE.md  UI-GUIDE_zh.md  lark-setup-guide.md
experiment_scripts/: test_yunwu_api.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: config.js
frontend/src/: App.tsx  index.css
scripts/: _run_all_replay_and_qa.py  _run_batch_qa.py  _run_interleaved.py  _run_other_modules.py  _run_other_retry.py  audit_nac_doc.py  backfill_netmind_default_models.py  build-desktop.sh  cleanup_local.sh  configure_providers.py  delete_narrative.py  deploy-cloud.sh  dev-local.sh  dummy_ports.py  generate_seed_dialogues.py  grant_quota_to_existing_users.py  init_default_narratives.py  nac_doc_lib.py  poc_single_loop_mcp_aiomysql.py  pre-notarize-audit.sh  run_locomo_qa_with_dump.py  run_seed_replay_and_qa.py  setup_database.py  start_evermemos.sh  test_conversation_dump.py  test_entity_job_integration.py  test_entity_semantic_search.py  verify_fd_no_leak.sh
start/: README.md  all.sh  backend.sh  control.sh  frontend.sh  job-trigger.sh  matrix-trigger.sh  mcp.sh  nexus-matrix.sh  poller.sh  telegram-trigger.sh  telegram.sh
tau2-bench/: pyproject.toml
tauri/: README.md
tauri/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
tauri/src-tauri/src/commands/: auth.rs  config.rs  health.rs  mod.rs  service.rs  tray.rs
tauri/src-tauri/src/sidecar/: health_monitor.rs  lark_preflight.rs  mod.rs  port_preflight.rs  process_manager.rs
tests/: conftest.py  test_audit_nac_doc.py  test_db_integration_wiring.py  test_integration_sqlite.py  test_message_bus_schemas.py  test_message_bus_tables.py  test_message_bus_trigger.py  test_messagebus_features.py  test_nac_doc_lib.py  test_schema_registry.py
(+1341 files in other folders)
