[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xyz-agent-context"
version = "0.1.0"
description = "XYZ Agent Context Framework for multi-agent systems"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.72.0",
    "claude-agent-sdk>=0.1.9",
    "openai>=2.7.1",
    "openai-agents>=0.5.0",
    "mcp[cli]>=1.20.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.2.0",
    "croniter>=6.0.0",
    "aiomysql>=0.3.2",
    "google-genai>=1.0.0",
    "fastmcp>=2.14.1",
    "numpy>=1.26.0",
    "python-telegram-bot>=21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xyz_agent_context", "backend"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
